convert an sld into viewer symbology
